# Orato_finetuning_qwen

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  PROJECT_CONTEXT.md  README.md  README_AZURE.md  data_on_azure.md  pyproject.toml
azureml/environments/: wrapper-lora-v2.yml  wrapper-lora.yml
azureml/jobs/: build-splits-cpu.yml  official-sft-h100-100hr.yml  official-sft-h100-1hr.yml  official-sft-h100-20hr.yml  test-wrapper-environment-cpu.yml
azureml/scripts/: test_environment.py
configs/: h100_100hr.yaml  h100_8gpu.yaml  h100_smoke.yaml  local_tiny.yaml  train_wrapper_lora_full_epoch.yaml  train_wrapper_lora_laptop_smoke.yaml  train_wrapper_official_sft_h100_100hr.yaml  train_wrapper_official_sft_h100_1hr.yaml  train_wrapper_official_sft_h100_20hr.yaml
configs/splits/: azure_blob_example.yaml  azure_mount_example.yaml  local_example.yaml  split1.yaml  split_all.yaml
notebooks/: azure_split_example.ipynb
requirements/: README.md  cpu-validation.txt  inference.txt  train-candidate.txt  wrapper-lora.txt
scripts/: preflight.py
src/orato_asr/: __init__.py  audio.py  cli.py  config.py  environment.py  (+2 more)
tests/: test_audio.py  test_build_splits.py  test_cli.py  test_config.py  test_data.py  test_environment.py  test_evaluation.py  test_import.py  test_integration_inference.py  test_integration_wrapper_training.py  test_official_h100.py  test_paths.py  test_qwen3_asr.py  test_storage_paths.py  test_training_memory_reporting.py  test_wrapper_config.py  test_wrapper_dataset.py  test_wrapper_lora.py  test_wrapper_runner_cli.py  test_wrapper_targets.py
(+26 files in other folders)
