[build-system]
requires = ["setuptools>=77,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "orato-qwen3-asr"
version = "0.1.0"
description = "Training project foundation for Orato's Hindi-Hinglish Qwen3-ASR work"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
]

[project.scripts]
orato-asr = "orato_asr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
